[package]
name = "controller"
version = "0.1.0"
edition = "2024"

[dependencies]
# Logging
simplelog = { version = "0.12.2", features = ["paris"] }

# Error handling
color-eyre = "0.6.5"

# Configuration
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2+spec-1.1.0"

# Async/Networking
tokio = "1.52.3"
quinn = "0.11.9"
planus = "1.3.0"
rcgen = "0.14.8"

# Camera's
nokhwa = "0.10.11"