[package]
name = "controller"
version = "0.1.0"
edition = "2024"

[dependencies]
# Logging
simplelog = { version = "0.12.2", features = ["paris"] }
colored = "3.1.1"

# Error handling
color-eyre = "0.6.5"

# Configuration
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

# Async/Networking
tokio = { version = "1.52.3", features = ["rt-multi-thread", "fs", "macros"] }
quinn = "0.11.9"
planus = "1.3.0"
rcgen = "0.14.8"

# mDNS
mdns-sd = "0.20.0"

# Camera's
v4l = "0.14.0"
bytes = "1.11.1"

[build-dependencies]
toml = "1.1.2"